<resources>
    <string name="app_name">SpendWise</string>
    <string name="wallet_icon_desc">Wallet Icon</string>
    <string name="start_button">Start</string>
    <string name="quit_button">Quit</string>
    <string name="Password_Text">Password</string>
    <string name="Login_Text">Login</string>
    <string name="email_address">Email Address</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="error_message_goes_here">Error Message Goes Here</string>
    <string name="error">Error message</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="expense_logs">Expense Logs</string>
    <string name="savings">Savings</string>
    <string name="chatbot">Chatbot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_budget">Add Budget</string>
    <string name="select_frequency">Select Frequency</string>
    <string name="budgets">Budgets</string>
</resources>