<?xml version="1.0" encoding="utf-8"?>
<!-- A menu that allows the user to navigate to different pages. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/baseline_home_24" />

    <item
        android:id="@+id/Budgets"
        android:title="@string/budgets"
        android:icon="@drawable/baseline_account_balance_wallet_24" />

    <item
        android:id="@+id/ExpenseLogs"
        android:title="@string/expense_logs"
        android:icon="@drawable/baseline_format_list_bulleted_24" />

    <item
        android:id="@+id/SavingsCircles"
        android:title="@string/savings"
        android:icon="@drawable/baseline_attach_money_24" />

    <item
        android:id="@+id/Chatbot"
        android:title="@string/chatbot"
        android:icon="@drawable/baseline_chat_bubble_24" />

    <item
        android:id="@+id/Invites"
        android:title="Invites"
        android:icon="@drawable/baseline_mail_outline_24"/>

</menu>
