<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <!-- SpendWise Title -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnStart"
        android:layout_marginBottom="100dp" />

    <!-- Wallet Logo (just above SpendWise) -->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/wallet"
        android:contentDescription="@string/wallet_icon_desc"
        app:layout_constraintBottom_toTopOf="@id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <!-- Start Button -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/start_button"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnQuit"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="12dp" />

    <!-- Quit Button -->
    <Button
        android:id="@+id/btnQuit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/quit_button"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/btn_quit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>



